# tinyraytracer_rs

./: Cargo.toml  LICENSE  README.md  Readme.md
src/: geometry.rs  lib.rs  main.rs  material.rs  ray_utils.rs  renderer.rs  scene.rs  sphere.rs
